--- a/Expense Tracker/style.css
+++ b/Expense Tracker/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: url("https://ak.picdn.net/shutterstock/videos/16435099/thumb/1.jpg");
 }
 .headings {
     text-align: center;
@@ -11,6 +12,7 @@ h3 {
 
 form {
     text-align: center;
+    font-weight: bold;
 }
 
 form button {
@@ -28,6 +30,8 @@ form button {
 form button:hover {
     background-color: rgb(14, 167, 12);
     color: black;
+    transition: 0.35s;
+    font-weight: bold;
 }
 
 #place {
@@ -45,6 +49,16 @@ form button:hover {
     width: 100px;
 }
 
+input:focus {
+    background-color: rgb(213, 213, 213);
+    border-color: rgb(213, 213, 213);
+}
+
+input:hover {
+    background-color: rgb(213, 213, 213);
+    border-color: rgb(213, 213, 213);
+}
+
 .name {
     margin-bottom: 10px;
 }
@@ -54,12 +68,22 @@ table, th, td {
 }
 
 table {
-    width: 40%;
+    width: 70%;
     text-align: left;
-    margin-left: 410px;
+    background-color: rgb(244, 236, 225);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #empty {
     letter-spacing: 5px;
     text-align: center;
 }
+
+.buttonStyle {
+    border: white;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: bold;
+}
+
+
