--- a/Note Taker App/style.css
+++ b/Note Taker App/style.css
@@ -1,4 +1,39 @@
-.section {
-    vertical-align: auto;
-    border: 1px solid black;
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+.note {
+    display: flex;
+    flex-direction: column;
+}
+.section {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 70%;
+    
+}
+
+.notes {
+    display: flex;
+    flex-direction: column;
+    height: 40vh;
+    width: 60vh;
+    border: 1px solid black;
+    overflow: hidden;
+    text-overflow: ellipsis;
+     display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+   
+}
+
+h4 {
+    text-align: center;
+}
+
+.notes button {
+    height: 2rem;
+}
+
