--- a/Note Taker App/style.css
+++ b/Note Taker App/style.css
@@ -1,39 +1,61 @@
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 .note {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
+
+.textArea {
+    display: flex;
+    flex-direction: row;
+}
+
 .section {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
-    width: 70%;
-    
+    justify-content: space-evenly;
 }
 
 .notes {
     display: flex;
     flex-direction: column;
-    height: 40vh;
-    width: 60vh;
-    border: 1px solid black;
-    overflow: hidden;
-    text-overflow: ellipsis;
-     display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-   
+    height: 5rem;
+    width: 31rem;
+    background-color: rgb(223, 219, 213);
+    border-radius: 0.1rem;
+    margin-bottom: 1rem;
+}
+
+.section button {
+    width: 6rem;
+    background-color: rgb(79, 79, 215);
+    color: cornsilk;
+    border: none;
+    border-radius: 1rem;
+
+}
+span {
+    width: 30rem;
+    height: 5rem;
+    text-align: left;
+    overflow: hidden; 
+    text-overflow: ellipsis;  
+    /* display: -webkit-box;
+    -webkit-line-clamp: 3;
+    /* -webkit-box-orient: vertical;     doesnt work 2 lines */
 }
 
 h4 {
-    text-align: center;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
 }
 
-.notes button {
-    height: 2rem;
+.newWindow {
+    opacity:0.8;
+    background-color:#ccc;
+    position:fixed;
+    width:100%;
+    height:100%;
+    top:0px;
+    left:0px;
 }
-
