--- a/Note Taker App/style.css
+++ b/Note Taker App/style.css
@@ -19,7 +19,7 @@
 .notes {
     display: flex;
     flex-direction: column;
-    height: 5rem;
+    height: 7rem;
     width: 31rem;
     background-color: rgb(223, 219, 213);
     border-radius: 0.1rem;
@@ -32,14 +32,16 @@
     color: cornsilk;
     border: none;
     border-radius: 1rem;
+    margin-bottom: 0.5rem;
 
 }
 span {
     width: 30rem;
-    height: 5rem;
+    height: 6rem;
     text-align: left;
     overflow: hidden; 
-    text-overflow: ellipsis;  
+    white-space: nowrap;
+    text-overflow: ellipsis;
     /* display: -webkit-box;
     -webkit-line-clamp: 3;
     /* -webkit-box-orient: vertical;     doesnt work 2 lines */
@@ -50,12 +52,20 @@ h4 {
     margin-bottom: 0.5rem;
 }
 
-.newWindow {
-    opacity:0.8;
-    background-color:#ccc;
-    position:fixed;
+.detail {
+    background-color: rgba(140, 131, 131, 0.5);
+    position: fixed;
     width:100%;
     height:100%;
     top:0px;
     left:0px;
+    display: none;
+}
+.detailTable {
+    position: absolute;
+    width: 60%;
+    height: auto;
+    background-color: lavender;
+    top: 50%;
+    left: 20%;
 }
